tests/fail/match/duplicate-name.pion
//~ run = "${PION} elab ${FILE}"

{
let (x, y, x) = (true, false, true);
{}
}
